src/test/deca/syntax/invalid/invalid_char.deca
// Resultats :
// Erreur contextuelle
// Ligne 3 : caractère invalide '$'

int a = 5;
int b = 10;
int c = a $ b;
